# CSOPESY-HW6

./: .gitignore  CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h  MarqueeConsole.cpp  config.h  globals.h  main.cpp
.claude/: settings.json
src/: Console.h  ConsoleManager.cpp  ConsoleManager.h  MainConsole.cpp  MainConsole.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  Screen.cpp  Screen.h  config.txt  globals.h  main.cpp
src/instructions/: IAdd.cpp  IAdd.h  IDeclare.cpp  IDeclare.h  IFor.cpp  IFor.h  IPrint.cpp  IPrint.h  ISleep.cpp  ISleep.h  ISubtract.cpp  ISubtract.h  Instruction.h  ProcessInstructions.h
